@@ -1,0 +1,5 @@
+[pubkey tester@test.net]
+MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC6yvo3L+AJ7AHWfcpH0CH5tGsCtm/ChgfL
+NM5UpMWEZSzYlVhaR5fE65dV4QujL8xTkV0FUJuDe3Omz+IArxYZpHZNQVS2inhMUt08cJxe
+fmP0fz3qmyMn1TZhyof6ksS4b4qt81nmjIYNFvQzupk0lq2gEqNbR8JlUMQkaQrWJQIDAQAB
+[end]
